ADD: Notification 추가 - Notification을 이용하여 백그라운드에서 녹음 가능하게 함

--- a/ChordBox_android/app/src/main/res/values/strings.xml
+++ b/ChordBox_android/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ChordBox</string>
+
+    <string name="channel_id">RecordChannel</string>
+    <string name="channel_name">RecordMusicChannel</string>
+    <string name="channel_description">RecordMusic</string>
 </resources>
