--- a/ChordBox_android/app/src/main/res/values/strings.xml
+++ b/ChordBox_android/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ChordBox</string>
+
+    <string name="no">No</string>
+    <string name="yes">Yes</string>
 </resources>
